# agent-interlude

./: .gitignore  .pre-commit-config.yaml  README.md  README.zh-TW.md  dogfood.sh  proxy.py  pyproject.toml  report.py
.github/workflows/: beta.yml  release.yml
docs/: release.md
src/agent_interlude/: __init__.py  __main__.py  analyze.py  proxy.py  report.py
